# pycatcher

./: .coveragerc  .gitignore  404.html  Anomaly Detection v1.py  CNAME  CODEOWNERS  README.md  Summary of Diagnostic Plot Functions.md  Summary of Package Functions.md  index.html  mkdocs.yml  prospector.yaml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  python-package-test-runner.yml
diagnostic_functions/: index.html
docs/: CNAME  Diagnostic Functions.md  Highlights.md  Outlier Detection Functions.md  diagnostic_functions.md  highlights.md  index.md  outlier_detection_functions.md
highlights/: index.html
notebooks/: Example Notebook.ipynb  example_notebook.ipynb
outlier_detection/: __init__.py  anomaly_detection.py
outlier_detection_functions/: index.html
search/: search_index.json
src/: anomaly_detection.py
src/catch/: __init__.py
src/pycatch/: __init__.py
src/pycatcher/: __init__.py  api_catch.py  api_diagnostics.py  api_run.py  catch.py  diagnostics.py  web_app.py  webapp.py
src/pycatcher/templates/: upload.html
tests/: __init__.py  conftest.py  test_anomaly_detection.py  test_api_catch.py  test_api_diagnostics.py  test_catch.py  test_diagnostics.py  test_pycatch.py  test_webapp.py
uploads/: test.csv
