[tool.poetry]
name = "outlier-detection"
version = "0.1.0"
description = "This is a project that automatically identifies the outliers from a given dataset"
authors = ["Assem Anand", "Jagadish Pamarthi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.3.3"
numpy = "^1.21.2"
scipy = "^1.7.1"
pyod = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=1.1.0"]